--- a/doc/util/hx-ambiente.tex
+++ b/doc/util/hx-ambiente.tex
@@ -10,9 +10,10 @@
 \usepackage{lmodern}
 \usepackage{underscore}
 \usepackage{graphicx}
-\usepackage{hyperref}
+\usepackage{listings}
 \usepackage{eurosym}
 \usepackage{float}
+\usepackage{hyperref}
 
 \usepackage[table]{xcolor}
 
