--- a/doc/util/hx-vers.sty
+++ b/doc/util/hx-vers.sty
@@ -2,7 +2,7 @@
 % da usare tramite il comando \input{../../util/hx-vers}
 % da aggiornare con il comando ./versioni.sh (dalla cartella doc)
 
-\newcommand{\NdP}{\emph{Norme\_di\_progetto\_0\_0\_5.pdf}}
+\newcommand{\NdP}{\emph{Norme\_di\_progetto\_0\_0\_5 - Revisione.pdf}}
 \newcommand{\Verbali}{\emph{Verbali.pdf}}
 \newcommand{\AdR}{\emph{Analisi\_dei\_requisiti\_0\_0\_0.pdf}}
 \newcommand{\SdF}{\emph{Studio\_di\_fattibilita\_0\_0\_0.pdf}}
